cmake_minimum_required (VERSION 3.5)

add_subdirectory (c_utils)
add_subdirectory (crypto_utils)
add_subdirectory (eis_utils)
add_subdirectory (exception_utils)
add_subdirectory (hash_utils)
add_subdirectory (jws_utils)
add_subdirectory (process_utils)
add_subdirectory (string_utils)
add_subdirectory (system_utils)
