cmake_minimum_required (VERSION 3.5)

add_subdirectory (c_utils)
add_subdirectory (config_utils)
add_subdirectory (contract_utils)
add_subdirectory (crypto_utils)
add_subdirectory (d2c_messaging)
add_subdirectory (eis_utils)
add_subdirectory (exception_utils)
add_subdirectory (extension_utils)
add_subdirectory (file_utils)
add_subdirectory (hash_utils)
add_subdirectory (https_proxy_utils)
add_subdirectory (installed_criteria_utils)
add_subdirectory (permission_utils)
add_subdirectory (parson_json_utils)
add_subdirectory (jws_utils)
add_subdirectory (parser_utils)
add_subdirectory (path_utils)
add_subdirectory (process_utils)
add_subdirectory (retry_utils)
add_subdirectory (string_utils)
add_subdirectory (system_utils)
add_subdirectory (workflow_data_utils)
add_subdirectory (workflow_utils)

if (ADUC_BUILD_UNIT_TESTS)
    add_subdirectory (test_utils)
endif ()
